--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ data_influxdb:
    - "8083:8083"
    - "8086:8086"
   volumes:
-   - /volumes/stutzthings-influx:/data
+   - /volumes/stutzthings-influx:/var/lib/influxdb
   restart: always
